--- a/myweb/style.css
+++ b/myweb/style.css
@@ -15,6 +15,7 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0px;
+    width: 100%;
 }
 
 
@@ -24,7 +25,7 @@ html {
 .nav-main {
   height: 70px;
   width: 100%;
-  background: transparent;
+  background: black;
   position: fixed;
   top: 0;
   left: 0;
@@ -83,7 +84,7 @@ html {
   animation: typewriter 4s steps(44) 1s 1 normal both,
     blinkTextCursor 500ms infinite;
   margin-top: 250px;
-  margin-left: 200px;
+  margin-left: 100px;
   width: 600px;
   
 }
@@ -113,7 +114,7 @@ html {
  color: white;
  font-size: 20px;
  font-family: 'Poppins', sans-serif;
- margin-left: 207px;
+ margin-left: 100px;
  margin-top: 35px;
 }
 
@@ -125,7 +126,7 @@ html {
   height:32px;
   width: 300px;
   justify-content: space-between;
-  margin-left: 10px;
+  margin-left: 200px;
 }
 
 
