--- a/myweb/phone.css
+++ b/myweb/phone.css
@@ -1,7 +1,6 @@
 /* FONTS */
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Poppins:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Poppins:wght@200&display=swap");
 
 /* HTML */
 
@@ -11,9 +10,9 @@
 
 body,
 html {
-    background-color: black;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .info-hero-container {
@@ -25,142 +24,140 @@ html {
 /* NAV BAR */
 
 .nav-main {
-    height: 95px;
-    width: 100%;
-    background: black;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
-  #nav-logo {
-    height: 60px;
-    width: auto;
-    padding: 10px;
-    margin-bottom: 20px;
-    float: left;
-    margin-left: 25px;
-    margin-top: 20px;
-  }
-  #nav-insta {
-    height: 60px;
-    width: auto;
-    float: right;
-  }
-  #nav-mail {
-    height: 60px;
-    width: auto;
-    float: right;
-    margin-right: 7px;
-  }
-  #nav-github {
-    height: 60px;
-    width: auto;
-    float: right;
-    margin-right: 7px;
-  }
-  #nav-linkedin {
-    height: 60px;
-    width: auto;
-    float: right;
-    margin-right: 7px;
-  }
-  .nav-icons {
-    padding: 20px;
-    margin-right: 30px;
-  }
-  
+  height: 95px;
+  width: 100%;
+  background: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+#nav-logo {
+  height: 60px;
+  width: auto;
+  padding: 10px;
+  margin-bottom: 20px;
+  float: left;
+  margin-left: 25px;
+  margin-top: 20px;
+}
+#nav-insta {
+  height: 60px;
+  width: auto;
+  float: right;
+}
+#nav-mail {
+  height: 60px;
+  width: auto;
+  float: right;
+  margin-right: 7px;
+}
+#nav-github {
+  height: 60px;
+  width: auto;
+  float: right;
+  margin-right: 7px;
+}
+#nav-linkedin {
+  height: 60px;
+  width: auto;
+  float: right;
+  margin-right: 7px;
+}
+.nav-icons {
+  padding: 20px;
+  margin-right: 30px;
+}
 
-  /* BIG NAME */
+/* BIG NAME */
 
 .big-name-div {
-    position: relative;
-    color: white;
-    font-weight: bold;
-    font-family: 'Oswald', sans-serif;
-    font-size: 60px;
-    letter-spacing: 3px;
-    overflow: hidden;
-    border-right: 3px solid hsl(0, 0%, 80%);
-    white-space: nowrap;
-    animation: typewriter 4s steps(44) 1s 1 normal both,
-      blinkTextCursor 500ms infinite;
-    margin-top: 250px;
-    margin-left: 150px;
-    width: 200px;
-    
-  }
-  
-  @keyframes typewriter {
-    from {
-      width: 0;
-    }
-    to {
-      width: 500px;
-    }
-  }
-  @keyframes blinkTextCursor {
-    from {
-      border-right-color: hsl(0, 0%, 80%);
-    }
-    to {
-      border-right-color: transparent;
-    }
-  }
+  position: relative;
+  color: white;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  font-size: 60px;
+  letter-spacing: 3px;
+  overflow: hidden;
+  border-right: 3px solid hsl(0, 0%, 80%);
+  white-space: nowrap;
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+    blinkTextCursor 500ms infinite;
+  margin-top: 250px;
+  margin-left: 150px;
+  width: 200px;
+}
 
-  /* INFO ABOUT ME BELOW MY NAME */
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 500px;
+  }
+}
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: hsl(0, 0%, 80%);
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+
+/* INFO ABOUT ME BELOW MY NAME */
 
 .info-div {
-    color: white;
-    font-size: 25px;
-    font-family: 'Poppins', sans-serif;
-    margin-left: 150px;
-    margin-top: 35px;
-    width: 400px;
-   }
+  color: white;
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
+  margin-left: 150px;
+  margin-top: 35px;
+  width: 400px;
+}
 
-   /* COPYRIGHT */
+/* COPYRIGHT */
 #copyright {
-    font-size: 18px;
-    margin-left: 2px;
-    margin-top: 20px;
-    font-weight: bold;
-    color: white;
-  
-  }
-  
-  /* OPENLY HOSTED */
-  
-  #openly-hosted {
-    font-size: 18px;
-    margin-left: 2px;
-    margin-top: 2px;
-    margin-bottom: 30px;
-    color: white ;
-  }
-  
-  /* FOOTER */
-  
-  .footer {
-    float: right;
-    margin-right: 20px;
-    align-items: right;
-    width: 100%;
-  }
-  
-  button {
-    background-color: transparent;
-    border: none;
-    color: white;
-    padding: 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 25px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: gray;
-  }
+  font-size: 18px;
+  margin-left: 2px;
+  margin-top: 20px;
+  font-weight: bold;
+  color: white;
+}
+
+/* OPENLY HOSTED */
+
+#openly-hosted {
+  font-size: 18px;
+  margin-left: 2px;
+  margin-top: 2px;
+  margin-bottom: 30px;
+  color: white;
+}
+
+/* FOOTER */
+
+.footer {
+  float: right;
+  margin-right: 20px;
+  align-items: right;
+  width: 100%;
+  margin-left: 10%;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  padding: 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: gray;
+}
