--- a/myweb/style.css
+++ b/myweb/style.css
@@ -108,6 +108,7 @@ html {
   font-family: "Poppins", sans-serif;
   margin-left: 170px;
   margin-top: 40px;
+  width: 40%;
 }
 
 /* LANGUAGE ICONS */
